[project]
name = "myllmutils"
version = "0.7.2"
description = "A lightweight library to ease LLM query and storage"
authors = [{name = "Sissel-Wu", email = "sissel126@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.1",
    "tiktoken>=0.12",
    "httpx[socks]>=0.28.1",
    "pyyaml>=6.0.3",
    "pillow>=12.1.1"
]

[project.scripts]
main = "myllmutils.main:main"
batch = "myllmutils.batch_process:main"

[project.optional-dependencies]
gpu = [
    "transformers>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myllmutils"]
